added shared SolutionInfo.cs and changed to pull version from VERSION.md

--- a/src/Moll.Test/Moll.Test.csproj
+++ b/src/Moll.Test/Moll.Test.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="AutomaticMapperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
