--- a/src/Moll/Moll.csproj
+++ b/src/Moll/Moll.csproj
@@ -34,6 +34,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="AutomaticMapper.cs" />
     <Compile Include="IMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
